--- a/Checklist.html
+++ b/Checklist.html
@@ -821,6 +821,8 @@ id="todo"
                   <p> View Map </p>
                   <p class="blurb"> 2 Completed Locations </p>
                 </div>
+                <div id="googleMap" onclick="initMap()">
+                </div>
                 <div class="link maplink" ng-repeat="checklist in completedchecklistresponses">
                   <img class="checklist" src="{!$Resource.checklist_checklist}"></img>
                   <p> {{checklist.Checklist__r.Name}} </p>
@@ -863,6 +865,10 @@ id="todo"
         $scope.photoMap = {};
         /** The Id of the current Checklist or Checklist Response being worked on. */
         $scope.currentChecklistId;
+        /** The current latitude. */
+        $scope.latitude;
+        /** The current longitude. */
+        $scope.longitude;
 
         /** Returns all the pending Checklist Responses. */
         var getPendingChecklistResponses = function() {
@@ -884,14 +890,11 @@ id="todo"
 
         /** REturns all the complete Checklist Responses. */
         var getCompletedChecklistResponses = function() {
-          console.log('gdsafasdf');
           Visualforce.remoting.Manager.invokeAction(
             '{!$RemoteAction.ChecklistExtension.completedChecklists}',
             function(result, event){
               if (event.status) {
-                console.log('go');
                 $scope.completedchecklistresponses = result;
-                console.log($scope.completedchecklistresponses);
                 $scope.$apply();
               } else if (event.type === 'exception') {
                 console.log('Exception: ' + event.message);
@@ -922,6 +925,7 @@ id="todo"
 
         /** Sets up Checklist Items to edit a pending Checklist. */
         var editChecklistItems = function() {
+          getLocation();
           Visualforce.remoting.Manager.invokeAction(
             '{!$RemoteAction.ChecklistExtension.editChecklistItems}',
             $scope.currentChecklistId,
@@ -967,6 +971,7 @@ id="todo"
 
 /** Gets Checklist Items to create a new Checklist Response. */
 var getChecklistItems = function() {
+  getLocation();
   Visualforce.remoting.Manager.invokeAction(
     '{!$RemoteAction.ChecklistExtension.getAllChecklistItems}',
     $scope.currentChecklistId,
@@ -1017,8 +1022,6 @@ function photoHelper(checklist_response_id) {
   alert(Object.keys($scope.photoMap).length);
   if (Object.keys($scope.photoMap).length > 0) {
     for (var key in $scope.photoMap) {
-      alert('iterate');
-      console.log($scope.photoMap[key]);
       Visualforce.remoting.Manager.invokeAction(
         '{!$RemoteAction.ChecklistExtension.photoRemotecall}',
         key,
@@ -1046,16 +1049,13 @@ function photoHelper(checklist_response_id) {
 
 /** Completes the current Checklist Response. */
 $scope.submitForm = function() {
-  var that = this;
   formHelper();
-  for(var i = 0; i < $scope.checklistitems.length; i++) {
-    var type = $scope.checklistitems[i].Checklist_Item__r.Type__c;
-
-  }
   Visualforce.remoting.Manager.invokeAction(
     '{!$RemoteAction.ChecklistExtension.submitResponses}',
     $scope.currentChecklistId,
     $scope.checklistitems,
+    $scope.latitude,
+    $scope.longitude,
     function(result, event){
       if (event.status) {
         photoHelper(result);
@@ -1068,7 +1068,6 @@ $scope.submitForm = function() {
     },
     {escape: true}
     );
-  console.log("yoo");
   getPendingChecklistResponses();
   getCompletedChecklistResponses();
   setSection($('#container section#three'), $('.active'));
@@ -1086,6 +1085,7 @@ $scope.saveResponse = function() {
       if (event.status) {
         photoHelper(result);
         alert('photoHelper');
+        getLocation();
       } else if (event.type === 'exception') {
         console.log('Exception: ' + event.message);
       } else {
@@ -1145,31 +1145,55 @@ function handlePhoto(evt){
   reader.readAsDataURL(file);
 }
 
+function getLocation() {
+  console.log('getLocation');
+    if (navigator.geolocation) {
+        console.log(navigator.geolocation.getCurrentPosition);
+        navigator.geolocation.getCurrentPosition(showPosition, showError);
+    } else {
+        alert("No locaiton");
+    }
+}
+function showPosition(position) {
+  console.log('showPosition');
+   $scope.latitude = position.coords.latitude;
+   $scope.longitude = position.coords.longitude; 
+}
+
+function showError(error) {
+    switch(error.code) {
+        case error.PERMISSION_DENIED:
+            alert("User denied the request for Geolocation.")
+            break;
+        case error.POSITION_UNAVAILABLE:
+            alert("Location information is unavailable.")
+            break;
+        case error.TIMEOUT:
+            alert("The request to get user location timed out.")
+            break;
+        case error.UNKNOWN_ERROR:
+            alert("An unknown error occurred.")
+            break;
+    }
+}
+
+
 }
 
 checklistApp.controller(controllers);
 
-google.maps.event.addDomListener(window, "load", initMap);
-function initMap(){
-  // Get Url Parameters
-  function getUrlVars() {
-    var vars = [], hash;
-    var hashes = window.location.href.slice(window.location.href.indexOf('?') + 1).split('&');
-    for (var i = 0; i < hashes.length; i++) {
-      hash = hashes[i].split('=');
-      vars.push(hash[0]);
-      vars[hash[0]] = hash[1];
-    }
-    return vars;
-  }
-  response = getUrlVars()['id'];
-  var latlng = new google.maps.LatLng(-34.397, 150.644);
-  var myOptions = {
-    zoom: 5,
-    center: latlng,
-    mapTypeId: google.maps.MapTypeId.ROADMAP
+function initialize()
+{
+var mapProp = {
+  center:new google.maps.LatLng(51.508742,-0.120850),
+  zoom:5,
+  mapTypeId:google.maps.MapTypeId.ROADMAP
   };
-  var map = new google.maps.Map(document.getElementById("map"),myOptions);
+var map=new google.maps.Map(document.getElementById("googleMap"),mapProp);
+}
+
+google.maps.event.addDomListener(window, 'load', initialize);
+ 
   /*
      Visualforce.remoting.Manager.invokeAction(
      '{!$RemoteAction.ChecklistExtension.lat_long}',
@@ -1195,7 +1219,6 @@ console.log('Error!');
 {escape: true}
 );
 */
-};
 
 // Get Url Parameters
 function getUrlVars() {
@@ -1213,6 +1236,11 @@ function getUrlVars() {
 
 
 </script>
+<style type="text/css">
+      html { height: 100% }
+      body { height: 100%; margin: 0; padding: 0 }
+      #googleMap { height: 100% }
+    </style>
 
 <script>
 /**
