Move map initiaion into controller

--- a/Checklist.html
+++ b/Checklist.html
@@ -1178,22 +1178,22 @@ function showError(error) {
 }
 
 
+var mapInit = function() {
+  var mapProp = {
+    center:new google.maps.LatLng(51.508742,-0.120850),
+    zoom:5,
+    mapTypeId:google.maps.MapTypeId.ROADMAP
+  }
+  var map=new google.maps.Map(document.getElementById("googleMap"),mapProp);
+}
+
+google.maps.event.addDomListener(window, 'load', mapInit);
+
+
 }
 
 checklistApp.controller(controllers);
 
-function initialize()
-{
-var mapProp = {
-  center:new google.maps.LatLng(51.508742,-0.120850),
-  zoom:5,
-  mapTypeId:google.maps.MapTypeId.ROADMAP
-  };
-var map=new google.maps.Map(document.getElementById("googleMap"),mapProp);
-}
-
-google.maps.event.addDomListener(window, 'load', initialize);
- 
   /*
      Visualforce.remoting.Manager.invokeAction(
      '{!$RemoteAction.ChecklistExtension.lat_long}',
