--- a/Checklist.html
+++ b/Checklist.html
@@ -1194,18 +1194,28 @@ var mapInit = function() {
 google.maps.event.addDomListener(window, 'load', mapInit);
 
 var markers = [];
+
   var createMarkers = function() {
     var response;
+    clearMarkers();
     for (var i = 0; i < $scope.completedchecklistresponses.length; i++) {
       response = $scope.completedchecklistresponses[i];
       var coordinates = new google.maps.LatLng(response.Location__Latitude__s, response.Location__Longitude__s);
       var marker = new google.maps.Marker({
         position: coordinates,
-        title: response.Name
+        title: response.Checklist__r.Name
       });
       markers.push(marker);
       console.log(marker);
       marker.setMap(map);
+    }
+  }
+
+  var clearMarkers = function() {
+    for (var i = markers.length - 1; i >= 0; i--) {
+      markers[i].setMap(null);
+      markers.pop();
+      console.log(markers.length);
     }
   }
 }
