--- a/Checklist.html
+++ b/Checklist.html
@@ -1206,8 +1206,8 @@ var markers = [];
         title: response.Checklist__r.Name
       });
       markers.push(marker);
-      console.log(marker);
       marker.setMap(map);
+      map.panTo(coordinates);
     }
   }
 
@@ -1215,7 +1215,6 @@ var markers = [];
     for (var i = markers.length - 1; i >= 0; i--) {
       markers[i].setMap(null);
       markers.pop();
-      console.log(markers.length);
     }
   }
 }
